--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
   "author": "Filip Joelsson <filip@pixiecoer.com>",
   "dependencies": {
     "contentful": "^4.1.2",
+    "extract-text-webpack-plugin": "^2.1.2",
     "less": "^2.7.2",
     "less-loader": "^4.0.4",
     "mustache-loader": "^0.4.1",
+    "raw-loader": "^0.5.1",
     "showdown": "^1.7.1",
+    "style-loader": "^0.18.2",
     "webpack": "^3.0.0"
   },
   "devDependencies": {
