--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vtv-generator",
   "version": "0.0.1",
   "scripts": {
-    "start": "./curlContentful.sh && webpack --progress --profile --bail"
+    "start": "./curlContentful.sh && ./dlAssets.php && webpack --progress --profile --bail"
   },
   "author": "Filip Joelsson <filip@pixiecoer.com>",
   "dependencies": {
