--- a/package.json
+++ b/package.json
@@ -6,14 +6,31 @@
   },
   "author": "Filip Joelsson <filip@pixiecoer.com>",
   "dependencies": {
+    "acorn-dynamic-import": "^2.0.2",
+    "ajv-keywords": "^2.1.0",
     "extract-text-webpack-plugin": "^2.1.2",
+    "interpret": "^1.0.3",
+    "is-utf8": "^0.2.1",
+    "json-loader": "^0.5.4",
     "less": "^2.7.2",
     "less-loader": "^4.0.4",
+    "loader-runner": "^2.3.0",
+    "memory-fs": "^0.4.1",
     "mustache-loader": "^0.4.1",
+    "node-libs-browser": "^2.0.0",
+    "normalize-package-data": "^2.4.0",
+    "parse-json": "^2.2.0",
+    "pinkie-promise": "^2.0.1",
     "raw-loader": "^0.5.1",
+    "set-blocking": "^2.0.0",
     "showdown": "^1.7.1",
+    "string-width": "^2.1.0",
     "style-loader": "^0.18.2",
-    "webpack": "^3.0.0"
+    "supports-color": "^4.1.0",
+    "tapable": "^0.2.6",
+    "watchpack": "^1.3.1",
+    "webpack": "^3.0.0",
+    "y18n": "^3.2.1"
   },
   "devDependencies": {
     "static-site-generator-webpack-plugin": "^3.4.1"
